--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,9 @@
       <div class="header__inner">
         <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
         <div class="header__content">
-          <div class="header__hamburger" id="js-header-hamburger"><span></span><span></span><span></span></div>
+          <div class="header__hamburger" id="js-hamburger"><span></span><span></span><span></span></div>
           <!--PC-header-->
-          <div class="header__pc-nav">
+          <nav class="header__pc-nav">
             <ul class="header__items">
               <li class="header__item">
                 <a href="#">
@@ -127,60 +127,58 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </nav>
         </div>
       </div>
       <!--SP-header-->
       <div class="header__sp-nav">
-        <div class="header__scroll">
-          <div class="header__site-map site-map">
-            <div class="site-map__sp-layout">
-              <div class="site-map__content">
-                <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">キャンペーン</a></div>
-                <div class="site-map__sub-group">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
-                    <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
-                  </ul>
-                </div>
-                <div class="site-map__main-title"><a href="#">私たちについて</a></div>
+        <nav class="header__site-map site-map">
+          <div class="site-map__sp-layout">
+            <div class="site-map__content">
+              <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">キャンペーン</a></div>
+              <div class="site-map__sub-group">
+                <ul class="site-map__sub-titles">
+                  <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
+                  <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
+                </ul>
               </div>
-              <div class="site-map__main">
-                <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
-                <div class="site-map__sub-group">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
-                  </ul>
-                </div>
-                <div class="site-map__main-title"><a href="#">ブログ</a></div>
-              </div>
+              <div class="site-map__main-title"><a href="#">私たちについて</a></div>
             </div>
-            <div class="site-map__sp-layout">
-              <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">お客様の声</a></div>
-                <div class="site-map__main-title"><a href="#">料金一覧</a></div>
-                <div class="site-map__sub">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
-                  </ul>
-                </div>
+            <div class="site-map__main">
+              <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
+              <div class="site-map__sub-group">
+                <ul class="site-map__sub-titles">
+                  <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
+                  <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                </ul>
               </div>
-              <ul class="site-map__main">
-                <li class="site-map__main-title"><a href="#">よくある質問</a></li>
-                <li class="site-map__main-title">
-                  <a href="#">プライバシー<wbr />ポリシー</a>
-                </li>
-                <li class="site-map__main-title"><a href="#">利用規約</a></li>
-                <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
-              </ul>
+              <div class="site-map__main-title"><a href="#">ブログ</a></div>
             </div>
           </div>
-        </div>
+          <div class="site-map__sp-layout">
+            <div class="site-map__main">
+              <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">お客様の声</a></div>
+              <div class="site-map__main-title"><a href="#">料金一覧</a></div>
+              <div class="site-map__sub">
+                <ul class="site-map__sub-titles">
+                  <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
+                  <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                </ul>
+              </div>
+            </div>
+            <ul class="site-map__main">
+              <li class="site-map__main-title"><a href="#">よくある質問</a></li>
+              <li class="site-map__main-title">
+                <a href="#">プライバシー<wbr />ポリシー</a>
+              </li>
+              <li class="site-map__main-title"><a href="#">利用規約</a></li>
+              <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
+            </ul>
+          </div>
+        </nav>
       </div>
     </header>
     <main>
@@ -210,25 +208,23 @@
         </div>
       </div>
       <div class="topFVswiper__texts">
-        <h1 class="topFVswiper__main-text">DIVING</h1>
+        <h2 class="topFVswiper__main-text">DIVING</h2>
         <p class="topFVswiper__sub-text">into the ocean</p>
       </div>
       <!--Campaign-->
       <section class="topCampaign topCampaign-wrapper">
         <div class="topCampaign__inner inner">
-          <div class="topCampaign__swiper-button-relative">
-            <div class="topCampaign__titles section-titles">
-              <p class="section-titles__english">Campaign</p>
-              <h2 class="section-titles__japanese">キャンペーン</h2>
-            </div>
-            <div class="topCampaign__swiper-button-wrapper">
-              <div class="topCampaign__prev"></div>
-              <div class="topCampaign__next"></div>
-            </div>
+          <div class="topCampaign__titles section-titles">
+            <p class="section-titles__english">Campaign</p>
+            <h2 class="section-titles__japanese">キャンペーン</h2>
           </div>
-          <div class="topCampaign swiper" id="js-topCampaignSwiper">
-            <div class="topCampaign__slider-wrapper campaign-cards swiper-wrapper">
-              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
+          <div class="topCampaign__swiper-button-wrapper">
+            <div class="topCampaign__prev"></div>
+            <div class="topCampaign__next"></div>
+          </div>
+          <div class="topCampaign__swiper swiper" id="js-topCampaign">
+            <div class="topCampaign__slider-wrapper swiper-wrapper">
+              <a href="#" class="topCampaign__card campaign-card swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
                 </figure>
@@ -246,7 +242,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
+              <a href="#" class="topCampaign__card campaign-card swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
                 </figure>
@@ -264,7 +260,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
+              <a href="#" class="topCampaign__card campaign-card swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
                 </figure>
@@ -282,7 +278,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
+              <a href="#" class="topCampaign__card campaign-card swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
                 </figure>
@@ -303,7 +299,7 @@
             </div>
           </div>
           <div class="topCampaign__btn-wrapper">
-            <a href="#" class="topCampaign__btn btn"
+            <a href="#" class="btn"
               >View more
               <span></span>
             </a>
@@ -318,20 +314,20 @@
             <p class="section-titles__english">About us</p>
             <h2 class="section-titles__japanese">私たちについて</h2>
           </div>
-          <div class="top-about-us__img-wrapper about-us">
-            <div class="about-us__img-left">
+          <div class="top-about-us__img-wrapper">
+            <div class="top-about-us__img-left">
               <img src="./assets/images/common/about-us-left.png" alt="沖縄の赤茶色の瓦屋根にシーサーが乗っていてこちらを見ている" />
             </div>
-            <div class="about-us__img-right">
+            <div class="top-about-us__img-right">
               <img src="./assets/images/common/about-us-right.png" alt="海の中で黄色い熱帯魚が２匹向かい合っている" />
             </div>
           </div>
-          <div class="about-us__texts">
-            <p class="about-us__main-text">Dive into<br />the Ocean</p>
-            <div class="about-us__text">
+          <div class="top-about-us__texts">
+            <p class="top-about-us__main-text">Dive into<br />the Ocean</p>
+            <div class="top-about-us__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
               <div class="top-about-us__btn-wrapper">
-                <a href="#" class="top-about-us__btn btn"
+                <a href="#" class="btn"
                   >View more
                   <span></span>
                 </a>
@@ -358,7 +354,7 @@
                 正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
               </div>
               <div class="top-info__btn-wrapper">
-                <a href="#" class="top-info__btn btn"
+                <a href="#" class="btn"
                   >View more
                   <span></span>
                 </a>
@@ -375,8 +371,8 @@
             <p class="section-titles__english section-titles__english--white">Blog</p>
             <h2 class="section-titles__japanese section-titles__japanese--white">ブログ</h2>
           </div>
-          <div class="top-blog__cards">
-            <a href="#" class="top-blog__cards-item blog-card">
+          <div class="top-blog__cards top-blog__cards-wrapper">
+            <a href="#" class="top-blog__card blog-card">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog1.png" alt="ピンク色の珊瑚の写真" />
               </figure>
@@ -386,7 +382,7 @@
                 <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
               </div>
             </a>
-            <a href="#" class="top-blog__cards-item blog-card">
+            <a href="#" class="top-blog__card blog-card">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog2.png" alt="こちらに向かって泳ぐウミガメの写真" />
               </figure>
@@ -396,7 +392,7 @@
                 <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
               </div>
             </a>
-            <a href="#" class="top-blog__cards-item blog-card">
+            <a href="#" class="top-blog__card blog-card">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog3.png" alt="イソギンチャクの中から顔をのぞかせているカクレクマノミ" />
               </figure>
@@ -409,7 +405,7 @@
           </div>
         </div>
         <div class="top-blog__btn-wrapper">
-          <a href="#" class="top-blog__btn btn"
+          <a href="#" class="btn"
             >View more
             <span></span>
           </a>
@@ -423,8 +419,8 @@
             <p class="section-titles__english">Voice</p>
             <h2 class="section-titles__japanese">お客様の声</h2>
           </div>
-          <div class="top-voice__cards">
-            <div class="top-voice__cards-item voice-card">
+          <div class="top-voice__cards top-voice__cards-wrapper">
+            <div class="top-voice__card voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -442,7 +438,7 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </div>
             </div>
-            <div class="top-voice__cards-item voice-card">
+            <div class="top-voice__card voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -462,7 +458,7 @@
             </div>
           </div>
           <div class="top-voice__btn-wrapper">
-            <a href="#" class="top-voice__btn btn"
+            <a href="#" class="btn"
               >View more
               <span></span>
             </a>
@@ -551,7 +547,7 @@
             </div>
           </div>
           <div class="top-price__btn-wrapper">
-            <a href="#" class="top-price__btn btn"
+            <a href="#" class="btn"
               >View more
               <span></span>
             </a>
@@ -585,7 +581,7 @@
               </div>
               <p class="contact__text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__btn-wrapper">
-                <a href="#" class="contact__btn btn"
+                <a href="#" class="btn"
                   >Contact us
                   <span></span>
                 </a>
@@ -600,7 +596,7 @@
       <div class="footer__js-scroll-top" id="footer__js-scroll-top">
         <a href="#"><img src="./assets/images/common/scroll-top.png" alt="上へ戻る矢印" /></a>
       </div>
-      <div class="footer__inner">
+      <div class="footer__inner inner">
         <div class="footer__icons">
           <div class="footer__logo">
             <a href="index.html"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -614,7 +610,7 @@
             </div>
           </div>
         </div>
-        <div class="footer__site-map site-map">
+        <nav class="footer__site-map site-map">
           <div class="site-map__sp-layout">
             <div class="site-map__content">
               <div class="site-map__main-title"><a href="#">キャンペーン</a></div>
@@ -660,7 +656,7 @@
               <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
             </ul>
           </div>
-        </div>
+        </nav>
       </div>
       <div class="footer__copy">Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</div>
     </footer>
