--- a/src/index.html
+++ b/src/index.html
@@ -39,16 +39,16 @@
   </head>
   <body>
     <!--loading
-    <div class="top-js-loading">
-      <div class="top-js-loading__start"></div>
-      <div class="top-js-loading__middle">
-        <div class="top-js-loading__left"></div>
-        <div class="top-js-loading__right"></div>
+    <div class="js-top-loading">
+      <div class="js-top-loading__start"></div>
+      <div class="js-top-loading__middle">
+        <div class="js-top-loading__left"></div>
+        <div class="js-top-loading__right"></div>
       </div>
-      <div class="top-js-loading__last">
-        <div class="top-js-loading__texts">
-          <h1 class="top-js-loading__main-text">DIVING</h1>
-          <p class="top-js-loading__sub-text">into the ocean</p>
+      <div class="js-top-loading__last">
+        <div class="js-top-loading__texts">
+          <h1 class="js-top-loading__main-text">DIVING</h1>
+          <p class="js-top-loading__sub-text">into the ocean</p>
         </div>
       </div>
     </div>-->
@@ -135,7 +135,7 @@
         <nav class="header__site-map site-map">
           <div class="site-map__sp-layout">
             <div class="site-map__content">
-              <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">キャンペーン</a></div>
+              <div class="site-map__main-title site-map__main-title--layout"><a href="#">キャンペーン</a></div>
               <div class="site-map__sub-group">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
@@ -146,7 +146,7 @@
               <div class="site-map__main-title"><a href="#">私たちについて</a></div>
             </div>
             <div class="site-map__main">
-              <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
+              <div class="site-map__main-title site-map__main-title--sp"><a href="#">ダイビング情報</a></div>
               <div class="site-map__sub-group">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
@@ -159,7 +159,7 @@
           </div>
           <div class="site-map__sp-layout">
             <div class="site-map__main">
-              <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">お客様の声</a></div>
+              <div class="site-map__main-title site-map__main-title--layout"><a href="#">お客様の声</a></div>
               <div class="site-map__main-title"><a href="#">料金一覧</a></div>
               <div class="site-map__sub">
                 <ul class="site-map__sub-titles">
@@ -170,7 +170,7 @@
               </div>
             </div>
             <ul class="site-map__main">
-              <li class="site-map__main-title"><a href="#">よくある質問</a></li>
+              <li class="site-map__main-title site-map__main-title--sp"><a href="#">よくある質問</a></li>
               <li class="site-map__main-title">
                 <a href="#">プライバシー<wbr />ポリシー</a>
               </li>
@@ -610,53 +610,55 @@
             </div>
           </div>
         </div>
-        <nav class="footer__site-map site-map">
-          <div class="site-map__sp-layout">
-            <div class="site-map__content">
-              <div class="site-map__main-title"><a href="#">キャンペーン</a></div>
-              <div class="site-map__sub-group">
-                <ul class="site-map__sub-titles">
-                  <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
-                  <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
-                </ul>
+        <div class="footer__site-map-wrapper">
+          <nav class="footer__site-map site-map">
+            <div class="site-map__sp-layout">
+              <div class="site-map__content">
+                <div class="site-map__main-title site-map__main-title--layout"><a href="#">キャンペーン</a></div>
+                <div class="site-map__sub-group">
+                  <ul class="site-map__sub-titles">
+                    <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
+                    <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
+                  </ul>
+                </div>
+                <div class="site-map__main-title"><a href="#">私たちについて</a></div>
               </div>
-              <div class="site-map__main-title"><a href="#">私たちについて</a></div>
-            </div>
-            <div class="site-map__main">
-              <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
-              <div class="site-map__sub-group">
-                <ul class="site-map__sub-titles">
-                  <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                  <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
-                </ul>
-              </div>
-              <div class="site-map__main-title"><a href="#">ブログ</a></div>
-            </div>
-          </div>
-          <div class="site-map__sp-layout">
-            <div class="site-map__main">
-              <div class="site-map__main-title"><a href="#">お客様の声</a></div>
-              <div class="site-map__main-title"><a href="#">料金一覧</a></div>
-              <div class="site-map__sub">
-                <ul class="site-map__sub-titles">
-                  <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                  <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
-                </ul>
+              <div class="site-map__main">
+                <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
+                <div class="site-map__sub-group">
+                  <ul class="site-map__sub-titles">
+                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
+                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                  </ul>
+                </div>
+                <div class="site-map__main-title"><a href="#">ブログ</a></div>
               </div>
             </div>
-            <ul class="site-map__main">
-              <li class="site-map__main-title"><a href="#">よくある質問</a></li>
-              <li class="site-map__main-title">
-                <a href="#">プライバシー<wbr />ポリシー</a>
-              </li>
-              <li class="site-map__main-title"><a href="#">利用規約</a></li>
-              <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
-            </ul>
-          </div>
-        </nav>
+            <div class="site-map__sp-layout">
+              <div class="site-map__main">
+                <div class="site-map__main-title site-map__main-title--layout"><a href="#">お客様の声</a></div>
+                <div class="site-map__main-title"><a href="#">料金一覧</a></div>
+                <div class="site-map__sub">
+                  <ul class="site-map__sub-titles">
+                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
+                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                  </ul>
+                </div>
+              </div>
+              <ul class="site-map__main">
+                <li class="site-map__main-title"><a href="#">よくある質問</a></li>
+                <li class="site-map__main-title">
+                  <a href="#">プライバシー<wbr />ポリシー</a>
+                </li>
+                <li class="site-map__main-title"><a href="#">利用規約</a></li>
+                <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </div>
       <div class="footer__copy">Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</div>
     </footer>
