--- a/src/index.html
+++ b/src/index.html
@@ -133,53 +133,55 @@
       <!--SP-header-->
       <div class="header__sp-nav">
         <div class="header__site-map-wrapper">
-          <nav class="header__site-map site-map">
-            <div class="site-map__sp-layout">
-              <div class="site-map__content">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="#">キャンペーン</a></div>
-                <div class="site-map__sub-group">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
-                    <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
-                  </ul>
+          <div class="header__site-map-inner">
+            <nav class="header__site-map site-map">
+              <div class="site-map__sp-layout">
+                <div class="site-map__content">
+                  <div class="site-map__main-title site-map__main-title--layout"><a href="#">キャンペーン</a></div>
+                  <div class="site-map__sub-group">
+                    <ul class="site-map__sub-titles">
+                      <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
+                      <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
+                    </ul>
+                  </div>
+                  <div class="site-map__main-title"><a href="#">私たちについて</a></div>
                 </div>
-                <div class="site-map__main-title"><a href="#">私たちについて</a></div>
-              </div>
-              <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--sp"><a href="#">ダイビング情報</a></div>
-                <div class="site-map__sub-group">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
-                  </ul>
-                </div>
-                <div class="site-map__main-title"><a href="#">ブログ</a></div>
-              </div>
-            </div>
-            <div class="site-map__sp-layout">
-              <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="#">お客様の声</a></div>
-                <div class="site-map__main-title"><a href="#">料金一覧</a></div>
-                <div class="site-map__sub">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
-                  </ul>
+                <div class="site-map__main">
+                  <div class="site-map__main-title site-map__main-title--sp"><a href="#">ダイビング情報</a></div>
+                  <div class="site-map__sub-group">
+                    <ul class="site-map__sub-titles">
+                      <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
+                      <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                    </ul>
+                  </div>
+                  <div class="site-map__main-title"><a href="#">ブログ</a></div>
                 </div>
               </div>
-              <ul class="site-map__main">
-                <li class="site-map__main-title site-map__main-title--sp"><a href="#">よくある質問</a></li>
-                <li class="site-map__main-title">
-                  <a href="#">プライバシー<wbr />ポリシー</a>
-                </li>
-                <li class="site-map__main-title"><a href="#">利用規約</a></li>
-                <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
-              </ul>
-            </div>
-          </nav>
+              <div class="site-map__sp-layout">
+                <div class="site-map__main">
+                  <div class="site-map__main-title site-map__main-title--layout"><a href="#">お客様の声</a></div>
+                  <div class="site-map__main-title"><a href="#">料金一覧</a></div>
+                  <div class="site-map__sub">
+                    <ul class="site-map__sub-titles">
+                      <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
+                      <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <ul class="site-map__main">
+                  <li class="site-map__main-title site-map__main-title--sp"><a href="#">よくある質問</a></li>
+                  <li class="site-map__main-title">
+                    <a href="#">プライバシー<wbr />ポリシー</a>
+                  </li>
+                  <li class="site-map__main-title"><a href="#">利用規約</a></li>
+                  <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
+                </ul>
+              </div>
+            </nav>
+          </div>
         </div>
       </div>
     </header>
