--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                   <div class="site-map__main-title"><a href="#">私たちについて</a></div>
                 </div>
                 <div class="site-map__main">
-                  <div class="site-map__main-title site-map__main-title--sp"><a href="#">ダイビング情報</a></div>
+                  <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
                   <div class="site-map__sub-group">
                     <ul class="site-map__sub-titles">
                       <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
@@ -172,7 +172,7 @@
                   </div>
                 </div>
                 <ul class="site-map__main">
-                  <li class="site-map__main-title site-map__main-title--sp"><a href="#">よくある質問</a></li>
+                  <li class="site-map__main-title"><a href="#">よくある質問</a></li>
                   <li class="site-map__main-title">
                     <a href="#">プライバシー<wbr />ポリシー</a>
                   </li>
