--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,7 @@
             <h2 class="section-titles__japanese">お客様の声</h2>
           </div>
           <div class="top-voice__cards voice-cards">
-            <div class="voice-cards__item voice-card">
+            <a href="#" class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -434,8 +434,8 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
-            <div class="top-voice__card voice-card">
+            </a>
+            <a href="#" class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -452,7 +452,7 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
+            </a>
           </div>
           <div class="top-voice__btn-wrapper">
             <a href="#" class="btn"
